wwr/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap');

body {
    font-family: 'Lexend', Arial, sans-serif;
    font-size: 22px;
    margin: 0;
    padding: 0;
}

h2 {
    margin: 0;
}
#content {
    max-width: 1600px;
    margin: 0 auto;
}

nav a {
    text-align: center;
    color: #96E8BC;
    text-decoration: none;
    padding: 35px;
}

#hero-msg h1, #hero-msg h4 {
    text-align: center;
    color:#2d4530;
}

.button-box {
    text-align: center;
}

main section {
    text-align: center;
}

#background {
    height: 725px;
}

body {
    background-color: #7DD181;
}

header {
    font-family: time;
    background-color: #4B7F52;
}

nav a:hover {
    background-color: #2d4530;
}

.book, .join {
    background-color: #4B7F52;
    color:#7DD181;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.book:hover, .join:hover {
    background-color:#2d4530;
}

#background {
    background-color: #4B7F52;
}

.msg {
    background-color: #4B7F52;
    line-height: 1.5em;
    padding: 35px;
    
}

.home-title {
    color: #4B7F52;
    font-size: 2em;
    margin-top: 10px;
}

.msg h2 {
    color: #96E8BC;
}

.msg p {
    color: #96E8BC;
    font-size: 0.8em;
    padding-bottom: 15px;
}

footer {
    color: #96E8BC;
    background-color: #4B7F52;
    margin-top: 200px;
}
footer a {
    color: #2d4530;
    text-decoration: none;  
}
footer a:hover {
    color: #96E8BC;
}

.icons {
    width: 80px;
    padding-top: 10px;
}

#hero-img {
    width: 100%;
}

footer p {
    font-size: 1.2em;
    color
}

footer p a:hover {
    text-decoration: underline;
}

#logo_link {
    padding-top: 5px;
}

footer .social img {
    padding-top: 15px;
}

.rivers-card, .camping-card, .rapids-card {
    margin: 200px 0;
}

.card-img {
    border: 10px solid black;
}

main section img {
    box-sizing: border-box;
}

#logo_link img {
    width: 100px;
    height: 100px;
}

